# learning

./: README.md
lab_0/: CMakeLists.txt  main.cpp
lab_0/0b/: main.cpp  module1.cpp  module1.h
lab_1_tritset/: Reference.cpp  TritSet.cpp  TritSet.h  main.cpp
lab_2_game_of_life/: CMakeLists.txt  Cell.cpp  Cell.h  Command.cpp  Command.h  ConsoleColor.h  Entity.cpp  Entity.h  GameInterface.cpp  GameInterface.h  main.cpp
lab_2_game_of_life/exceptions/: Exception.cpp  Exception.h  GOL_Exceptions.cpp  GOL_Exceptions.h
lab_3_workflow/: CMakeLists.txt  Command.cpp  Command.h  Keys.h  Parser.cpp  Parser.h  SharedPtr.h  TextEditor.cpp  TextEditor.h  Workflow.cpp  Workflow.h  main.cpp
lab_3_workflow/exceptions/: Exception.cpp  Exception.h
lab_4_csv_parser/: CMakeLists.txt  CSVParser.h  Exception.cpp  Exception.h  Keywords.h  main.cpp
lab_4_csv_parser/subtask_1_print_tuple/: main.cpp  print_tuple.h
